<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <android.support.constraint.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    android:backgroundTint="#ECECEC"
    android:orientation="vertical"
    tools:context=".ui.neighbour_list.NeighbourDetailActivity">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        android:tint="#FFEB3B"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/activity_neighbour_detail"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_star_border_black_24dp"
        android:focusable="true" />
<!--  Avatar img CardView with CL inside!  -->
    <android.support.v7.widget.CardView
        android:id="@+id/image_card"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent">

<!--  Constraint Layout with Avatar img  -->
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--  Avatar img  -->
            <ImageView
                android:id="@+id/image_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profil"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_launcher_background" />

            <!--  Back Button img  -->
            <ImageButton
                android:id="@+id/imageButtonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/buttonback"
                android:paddingTop="50dp"
                android:paddingLeft="20dp"
                app:layout_constraintStart_toStartOf="@+id/image_avatar"
                app:layout_constraintTop_toTopOf="@+id/image_avatar"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

            <!--  Floating Name as Title  -->
            <TextView
                    android:id="@+id/nameProfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="24dp"
                    android:textColor="@color/cardview_light_background"
                    app:layout_constraintBottom_toBottomOf="@+id/image_avatar"
                    android:textSize="40sp"
                tools:ignore="PrivateResource" />




        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
<!--  End Avatar img CardView with CL inside!  -->

    <android.support.v7.widget.CardView
        android:id="@+id/activity_neighbour_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="150dp"
        app:layout_constraintTop_toBottomOf="@+id/image_card"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/activity_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="46dp"
            android:contentDescription="@string/location"
            app:srcCompat="@drawable/ic_location_on_black_24dp" />

        <TextView
            android:id="@+id/activity_address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="8dp"
            android:text="@string/saint_pierre_du_mont_5km" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="84dp"
            android:contentDescription="@string/phone"
            app:srcCompat="@drawable/ic_phone_black_24dp" />

        <TextView
            android:id="@+id/activity_phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="8dp"
            android:text="@string/_33_6_86_57_90_14" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/social_icon"
            app:srcCompat="@drawable/ic_language_black_24dp" />

        <TextView
            android:id="@+id/activity_social_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="8dp" />


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/activity_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:minHeight="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_neighbour_detail"
        app:layout_constraintVertical_bias="0.13999999"
        tools:layout_editor_absoluteX="8dp">


        <TextView
            android:id="@+id/activity_aboutMe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            android:text="@string/a_propos_de_moi"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_aboutMe_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="14dp"
            android:text="@string/profil_text"
            android:textSize="12sp" />

    </android.support.v7.widget.CardView>



</android.support.constraint.ConstraintLayout>
</ScrollView>